--- a/index.html
+++ b/index.html
@@ -31,11 +31,21 @@
         button:hover {
             background-color: #ff1493;
         }
+        img {
+            max-width: 300px;
+            height: auto;
+            border-radius: 15px;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
     <h1>Hey there, Want to Hang Out?</h1>
     <p>I'd love to catch up and spend some time with you!</p>
+    
+    <!-- Add your picture below -->
+    <img src="bunnyRide.jpg" alt="Picture of me" />
+    
     <button onclick="alert('Yay! Can’t wait to see you!')">Yes, let’s do it!</button>
     <button onclick="alert('Maybe next time then. 😢')">Not today</button>
 </body>
