--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
             border-radius: 15px;
             margin-top: 20px;
         }
+        img_v2 {
+            max-width: 300px;
+            height: auto;
+            border-radius: 15px;
+            margin-top: 20px;
+            display: none;
+        }
+        #message {
+            font-size: 18px;
+            color: #ff1493;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -55,8 +67,8 @@
      <!-- Placeholder for messages and images -->
     <div id="response-area">
         <p id="message"></p>
-        <img id="pictureA" src="letGo.jpg" alt="Picture A" />
-        <img id="pictureB" src="bunnySad.jpg" alt="Picture B" />
+        <img_v2 id="pictureA" src="letGo.jpg" alt="Picture A" />
+        <img_v2 id="pictureB" src="bunnySad.jpg" alt="Picture B" />
     </div>
 
     <!-- JavaScript to handle button clicks -->
