--- a/index.html
+++ b/index.html
@@ -37,11 +37,8 @@
             border-radius: 15px;
             margin-top: 20px;
         }
-        img_v2 {
-            max-width: 300px;
-            height: auto;
-            border-radius: 15px;
-            margin-top: 20px;
+        /* Hide other images by default */
+        #pictureA, #pictureB {
             display: none;
         }
         #message {
@@ -67,8 +64,8 @@
      <!-- Placeholder for messages and images -->
     <div id="response-area">
         <p id="message"></p>
-        <img_v2 id="pictureA" src="letGo.jpg" alt="Picture A" />
-        <img_v2 id="pictureB" src="bunnySad.jpg" alt="Picture B" />
+        <img id="pictureA" src="letGo.jpg" alt="Picture A" />
+        <img id="pictureB" src="bunnySad.jpg" alt="Picture B" />
     </div>
 
     <!-- JavaScript to handle button clicks -->
