--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         /* Hide other images by default */
         #pictureA, #pictureB {
             display: none;
+            margin: 0 auto; /* Center images horizontally */
         }
         #message {
             font-size: 18px;
