--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <br>
 
     <!-- Buttons to select -->
-    <button onclick="showResponse('A')">Yes, let’s do it!</button>
-    <button onclick="showResponse('B')">Not today</button>
+    <button onclick="showResponse('A')">Vâng ạaaaa!</button>
+    <button onclick="showResponse('B')">Nah</button>
 
      <!-- Placeholder for messages and images -->
     <div id="response-area">
